# lil

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md  SECURITY.md  STATUS.md
src/: cache.rs  cli.rs  commands.rs  config.rs  daemon.rs  diagnostics.rs  discovery.rs  entries.rs  gossip.rs  group.rs  identity.rs  ignore.rs  invite.rs  logging.rs  main.rs  message.rs  peers.rs  protocol.rs  rpc.rs  scan.rs  snapshot.rs  state.rs  sync.rs  sync_tree.rs  transport.rs  tree.rs  ui.rs  watcher.rs
src_old/: diagnostics.rs  main.rs  peers.rs  transport.rs
