[package]
name = "tngl-tools"
version = "0.1.1"
edition = "2024"
description = "Mesh sync daemon for folders"
license = "MIT"
repository = "https://github.com/vrypan/fmesh"
homepage = "https://github.com/vrypan/fmesh"

[[bin]]
name = "tngl"
path = "src/main.rs"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.40", default-features = false, features = ["derive", "std", "color", "help", "usage", "error-context"] }
notify = "8.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = "thin"
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
