[package]
name = "lilsync"
version = "0.2.2"
edition = "2024"
description = "a little tool to sync your files"
license = "MIT"
repository = "https://github.com/vrypan/lilsync"
homepage = "https://github.com/vrypan/lilsync"

[[bin]]
name = "lil"
path = "src/main.rs"

[dependencies]
bincode = "1.3"
blake3 = "1.8.2"
clap = { version = "4.5.40", default-features = false, features = ["derive", "std", "color", "help", "usage", "error-context"] }
ed25519-dalek = "3.0.0-pre.1"
futures-lite = "2.6.1"
libc = "0.2.185"
mdns-sd = "0.19.1"
notify = "8.2.0"
pkcs8 = "=0.11.0-rc.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
snow = "0.9.6"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "io-util", "sync", "time", "net", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
lto = "thin"
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
